# python-basic

homework_01/: main.py
homework_02/: base.py  car.py  plane.py
homework_03/: Dockerfile  README.md  pyproject.toml
homework_03/blog/: main.py  views.py
homework_04/: config.py  docker-compose.yaml  jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/static/js/: next-item.js
homework_05/templates/: about.html  base.html  index.html
homework_05/view/: index.py
homework_06/: Dockerfile  READ ME  app.py  config.py  docker-compose.yaml  prestart.sh  pyproject.toml
homework_06/migrations/versions/: fc276269e491_create_zodiacs_table.py
homework_06/models/: __init__.py  astro.json  zodiacs.py
homework_06/static/css/: press-loading.css
homework_06/templates/: base.html  index.html
homework_06/templates/macros/: show-flashed-messages.html
homework_06/templates/zodiacs/: add.html  as.html  confirm-delete.html  details.html  list.html
homework_06/views/: zodiacs.py
homework_06/views/forms/: listzodiac.py
homework_07/: pyproject.toml
homework_07/astrology/astrology/: settings.py  urls.py
homework_07/astrology/zodiacs/: admin.py  apps.py  models.py  urls.py  views.py
homework_07/astrology/zodiacs/migrations/: 0001_initial.py
homework_07/astrology/zodiacs/templates/zodiacs/: index.html  name-with-zodiacs-name.html
