[tool.poetry]
name = "homework-03"
version = "0.1.0"
description = ""
authors = ["maria <xxmarrria@gmail.com>"]
readme = "README.md"
#packages = [{include = "blog_app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
uvicorn = {extras = ["standart"], version = "^0.21.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
faker = "^18.4.0"
requests = "^2.28.2"
docker = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
