[tool.poetry]
name = "shop-project"
version = "0.1.0"
description = "Flask Shop App"
authors = ["maria <xxmarrria@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
flask-sqlalchemy = "^3.0.3"
sqlalchemy = "<2"
flask-migrate = "^4.0.4"
flask-wtf = "^1.1.1"
pg8000 = "^1.29.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
